[feat] Dto to each product response applied to some request. [feat] Now paginated request can use a method to retrieve the DTO data in items.
[docs] Now login has swagger docs.

[todo] Add docs to each request to products.
